[gd_scene load_steps=3 format=3 uid="uid://dssmk0m8xsvxf"]

[ext_resource type="Theme" uid="uid://dreboohjjcn2f" path="res://assets/themes/LoginPanelTheme.tres" id="1_yn42h"]
[ext_resource type="Script" path="res://scenes/player/gamemenu/GameMenu.gd" id="2_dg6jl"]

[node name="GameMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -802.0
offset_bottom = -244.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_yn42h")
script = ExtResource("2_dg6jl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="OptionsMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsButton" type="Button" parent="MarginContainer/VBoxContainer/OptionsMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Show Controls"

[node name="ReportBugMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ReportBugButton" type="Button" parent="MarginContainer/VBoxContainer/ReportBugMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Report Bug"

[node name="UnstuckButtonMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UnstuckButton" type="Button" parent="MarginContainer/VBoxContainer/UnstuckButtonMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "I'm Stuck Help!
"

[node name="QuitButtonMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/QuitButtonMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit Game
"
